--- a/Package.json
+++ b/Package.json
@@ -1,12 +1,13 @@
 {
   "name": "Role_Base_Auth", 
   "version": "1.0.0",
+  "description": "ecommerce site",
   "scripts": {
     "build": "cd frontend && npm install && npm run build && cd ../backend && npm install",
     "start": "cd backend && npm start",
     "dev": "concurrently \"cd frontend && npm run dev\" \"cd backend && npm run dev\""
   },
-  "dependencies": {},
+"keywords": ["react","nodejs"],
   "devDependencies": {
     "concurrently": "^7.6.0"
   }
