--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "Role_Base_Auth", 
+  "name": "Role_Based_Auth",
   "version": "1.0.0",
-  "description": "ecommerce site",
+  "description": "Full-stack e-commerce application with React and Node.js",
   "scripts": {
-    "build": "cd frontend && npm install && npm run build && cd ../backend && npm install",
+    "build": "cd frontend && npm ci && npm run build && cd ../backend && npm ci",
     "start": "cd backend && npm start",
     "dev": "concurrently \"cd frontend && npm run dev\" \"cd backend && npm run dev\""
   },
-"keywords": ["react","nodejs"],
+  "keywords": ["react", "nodejs", "ecommerce", "mongodb", "cloudinary"],
+  "author": "Your Name",
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "devDependencies": {
     "concurrently": "^7.6.0"
   }
